[package]
name = "ripsed-fs"
description = "File system layer for ripsed — discovery, reading, atomic writes"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ignore = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
